Bump version to 1.1.4 in package-lock.json, package.json, app.json, and .homeycompose/app.json Fix for long value text overlapping the next row when not in dense mode

--- a/widgets/enhanced-device/public/extraStyles.css
+++ b/widgets/enhanced-device/public/extraStyles.css
@@ -96,12 +96,12 @@
 
 .alignleft[dense="false"] {
 	margin-top: 15px;
-	height: 25px;
+	min-height: 25px;
 }
 
 .alignright[dense="false"] {
 	margin-top: 15px;
-	height: 25px;
+	min-height: 25px;
 }
 
 /* Dense Layout for Capabilities Section */
